--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Master of Education 
+  uni: University of Waterloo
+  year: September 8, 2021 to May 5, 2027
   # awards:
   # summary:
